# dot_scripts

./: .gitignore  .justfile.swp  README.md  blog_by_geppetta.md  blog_by_geppetta_2.md  blog_by_jenny.md  blog_by_jenny_2.md  browse.md  browse.py  change_log.md  clean_md.md  clean_md.py  clean_md.review.1.md  clean_md.review.1.response.md  clean_md.review.2.md  clean_md.review.2.response.md  clean_md.review.3.md  clean_md.review.3.response.md  clean_md.review.4.md  copyImage.md  copyImage.py  explore_weather_apis.py  falkgmail.sh  falkgmail_userguide.md  flines.md  flines.py  get_weather.md  get_weather.py  get_weather_design.md  justfile  kongmail.sh  kongmail_userguide.md  letter_from_geppetta.md  letter_from_jenny.md  mhtml2md.md  mhtml2md.py  mhtml2md.py.review.1.md  paste_image.py  paste_image.sh  pyproject.toml  (+27 more)
tests/: test_browse.py  test_clean_md.py  test_clean_md.review.1.md  test_clean_md.review.1.response.md  test_clean_md.review.2.md  test_clean_md.review.2.response.md  test_clean_md.review.3.md  test_clean_md.review.3.response.md  test_copyImage.py  test_flines.py  test_get_weather.py  test_mhtml2md.py  test_paste_image.py  test_search.py  test_treeg.py  test_treeg.py.review.1.md  test_treeg.py.review.1.response.md  test_treeg.py.review.2.md  test_treeg.py.review.2.response.md  test_treeg.py.review.3.md  test_treeg.py.review.3.response.md  test_treeg.py.review.4.md  test_treeg.py.review.4.response.md
