[project]
name = "scripts"
version = "0.1.0"
description = "A collection of utility scripts"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[dependency-groups.dev]
dependencies = [
    "pytest>=8.0",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
